GH-10083: Apply Nullability to `file` module
Related to: https://github.com/spring-projects/spring-integration/issues/10083

* The change in the `file.dsl` package has affected the `ComponentsRegistration` contract in the core module.
And that one has led to respective fixes in the `AMQP`, `JPA`, `Kafka` modules for DSL packages
* Fix `SimpleJsonSerializer` contract to return an empty JSON instead of `null`.
Something similar to what Jackson 3 provides for us by default.
* Rework a `WatchServiceDirectoryScanner` logic to initialize its internals in the ctor to avoid null-away errors
* Fix `FileWritingMessageHandler`, `HeadDirectoryScanner`, and `RecursiveDirectoryScanner` code style and logic according to IDE suggestions and new Nullability functionality
* Fix classes in the `file.config` package according to new Nullability logic
* Implement Nullability for `FileListFilter` abstraction and its implementations
* Fix `FileChannelCache` for a proper constant name.
* Respectively, fix the `NioFileLockerTests` to use a new `FileChannelCache.CHANNEL_CACHE` constant
* The remote directory could be null for some protocol operations.
Therefore implement that respectively in the `FileInfo`, `Session` and `RemoteFileOperations`

The change might look big, but it is inevitable and pretty straightforward